# aws-rds-snapshot-import-to-gc-bigquery-with-dts

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml  samconfig.toml  template.yaml
src/: handler.py
terraform/environments/development/: .terraform.lock.hcl  backend.tf
terraform/shared/: main.tf  provider.tf  variables.tf  versions.tf
